refactor(fudi): 重构福地系统核心功能与灵兽管理机制
- 移除灵气系统相关字段和计算逻辑，包括 auraCurrent、auraMax、auraHourlyCost 等
- 删除阵眼类型(CellType.NODE)和相关耐久度(durability)字段
- 重构灵兽恢复和战斗状态判断逻辑，移除lifespanDays字段
- 替换收获(harvest)为收取(collect)概念，整合灵田和兽栏产出收取功能
- 新增灵兽出战、召回、恢复等管理功能及相应命令处理器
- 更新地灵情绪状态更新机制，基于好感度而非灵气比例
- 优化福地防御力计算公式，移除阵眼耐久度影响因素
- 精简福地状态展示界面，去除灵气相关内容展示